...



    <string name="help_home_screen_text">Here you can practice your sign language, with feedback through your camera.
Make sure to check your daily quest to learn a new letter every day.
You’ll also find exercises at the bottom to challenge yourself at varying levels of difficulty.</string>
    <string name="close_text">Close</string>
    <string name="letters_learned_text">Letters learned</string>
    <string name="camera_permission_required_text">Camera permission required</string>
    <string name="welcome_text">Welcome to Signify</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="light_mode_text">Light Mode</string>
    <string name="cancel_text">Cancel</string>
    <string name="unknown_text">unknown</string>
    <string name="my_friends_text">My Friends</string>
    <string name="my_stats_text">My Stats</string>
...

    <string name="confirm_changes_title">Confirm Changes</string>
    <string name="confirm_changes_message">Are you sure you want to save these changes?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="no_friend_text">No Friends</string>
    <string name="request_friends_text">Friend Requests</string>
    <string name="no_new_friend_text">You have no new friends</string>
    <string name="request_sent_text">Request sent</string>
    <string name="add_friend_text">Add Friend</string>
    <string name="remove_friend_text">Remove Friend</string>
    <string name="my_profile_text">My Profile</string>
    <string name="search_by_user_ID_text">Search by user ID</string>
    <string name="no_item_available_text">No item available</string>
    <string name="remove_text">Remove</string>
    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="confirm_friend_removal_text">Are you sure you want to remove this friend?</string>
    <string name="confirm_challenge_deletion_text">Are you sure you want to delete this challenge?</string>
    <string name="removed_friend_text">Friend removed</string>
    <string name="removed_challenge_text">Challenge deleted</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="quiz_time_text">Quiz Time !</string>
    <string name="correct_answer_text">Correct answer!</string>
    <string name="incorrect_answer_text">Incorrect answer, try again.</string>
    <string name="choose_correct_answer_text">Choose the correct answer:</string>
    <string name="submit_text">Submit</string>
    <string name="in_sign_language_text"> in ASL sign language</string>
...
