...

    navigation(
      startDestination = Screen.PROFILE,
      route = Route.PROFILE,
    ) {
      composable(Screen.PROFILE) {
        ProfileScreen(
          userId = "Test ID 1",
          userName = "Test Name 1",
          profilePictureUrl = null, // Replace with actual URL or null
          numberOfDays = 30,
          lettersLearned = listOf('A', 'B', 'C', 'D', 'E', 'F'),
          easyExercises = 1,
...
          onGraphClick = { /* Handle graph click */ },
          navigationActions = navigationActions
        )
      }

      composable(Route.FRIENDS) {
        FriendsListScreen(
          currentFriends = listOf("Friend 1", "Friend 2", "Friend 3"), // replace with actual data
          friendRequests = listOf("Friend 4"), // replace with actual data
          onRemoveFriend = { /* Handle remove friend */ },
          onAcceptFriendRequest = { /* Handle accept friend request */ },
          onRejectFriendRequest = { /* Handle reject friend request */ },
          onSearchUser = { /* Handle search user */ },
...
