...
              horizontalAlignment = Alignment.CenterHorizontally) {
                Spacer(modifier = Modifier.height(70.dp))

                // My Friends button
                ReusableTextButton(
                    onClickAction = { navigationActions.navigateTo("Friends") },
                    textTag = "MyFriendsButton",
                    text = "My Friends",
                    height = 60.dp,
                    borderColor = colorResource(R.color.dark_gray),
                    backgroundColor = colorResource(R.color.blue),
                    textSize = 26.sp,
                    textColor = colorResource(R.color.dark_gray))
...
