...
      modifier = Modifier.padding(16.dp) // Optional padding to adjust positioning
      ) {
        IconButton(
            onClick = { onClick() },
            modifier =
                Modifier.align(Alignment.TopStart)
                    .testTag("BackButton") // Align to the top left corner
            ) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = "BackButton",
                  tint = colorResource(R.color.blue))
            }
...
